Change number of images compared in GIG/XRAI

--- a/templates/guided-ig.html
+++ b/templates/guided-ig.html
@@ -69,10 +69,11 @@
   </div>
   <div class="attribution-container">
     <div id="headers">
-      <span style="width: 5%"></span><!--
-    --><span style="width: 30%">Image</span><!--
-    --><span style="width: 31%">Integrated</span><!--
-    --><span style="width: 30%">Guided IG</span>
+      <span style="width: 4%"></span><!--
+      --><span style="width: 32%">Image</span><!--
+      --><span style="width: 16%">Pixel-level</span><!--
+      --><span style="width: 16%">XRAI</span><!--
+      --><span style="width: 16%"></span>
     </div>
     <div id="table-container">
       <div class="grad-wrt-container">
