--- a/templates/xrai.html
+++ b/templates/xrai.html
@@ -60,16 +60,10 @@
   <div class="attribution-container">
     <div id="headers">
       <span style="width: 4%"></span><!--
-    --><span style="width: 32%">Image</span><!--
-    --><span style="width: 16%">Gradient</span><!--
-    --><span style="width: 16%">Integrated</span><!--
-    --><span style="width: 16%">Guided Backprop</span><!--
-    --><div class="img-times-selector-container">
-        <div class="img-times-selector">
-          <div class="select-grad grad-selected">Gradient</div>
-          <div class="select-img-times-grad grad-unselected">Gradient × Image</div>
-        </div>
-      </div>
+      --><span style="width: 32%">Image</span><!--
+      --><span style="width: 16%">IntegGrad</span><!--
+      --><span style="width: 16%">Guided IG</span><!--
+      --><span style="width: 16%"></span>
     </div>
     <div id="table-container">
       <div class="grad-wrt-container">
