Add GIG/XRAI masks to pages

--- a/templates/smoothgrad.html
+++ b/templates/smoothgrad.html
@@ -73,8 +73,8 @@
     </div>
     <div id="table-container">
       <div class="grad-wrt-container">
-        <input type="checkbox" id="show-mispred"/>
-        Only show mispredictions
+        <input type="checkbox" id="show-confident"/>
+        Only show highly confident predictions
       </div>
       <div class="pointer-container">
         <img src="images/pointer.png" width="30px"/>
