Update GIG/XRAI descriptions

--- a/templates/xrai.html
+++ b/templates/xrai.html
@@ -19,14 +19,17 @@
     </div>
   </div>
   <div class="descriptions">
-    <h3>What is a sensitivity mask?</h3>
+    <h3>What are saliency methods?</h3>
     <div class="description">
-        <p>When a machine learning model makes a prediction, often times we would like to determine which features of the input (pixels, for images) were important for the prediction. If the model makes a misprediction, we might want to know which features contributed to the misclassification. We can visualize the feature importance mask as a grayscale image with the same dimensions as the original image with brightness corresponding to importance of the pixel.</p>
+        <p>Saliency methods link a deep neural network's (DNN) prediction to the input features that most influence that prediction. If the model makes a misprediction, we might want to know which features contributed to the misclassification. We can visualize the saliency map for image models as a grayscale image with the same dimensions as the original image with brightness corresponding to the importance of the pixel.
+        </p>
     </div>
-    <h3>Computing sensitivity</h3>
+    <h3>XRAI and region-based saliency methods</h3>
     <div class="description">
-      <p>There are many techniques to compute a sensitivity mask for an image for a particular prediction. The simplest approach is to take the gradient of a class prediction neuron with respect to the input pixels. This tells us how much a small change to each pixel would affect the prediction. Visually, this mask tends to be noisy.</p>
-      <p>The SmoothGrad technique often significantly denoises this sensitivity mask. This technique adds pixel-wise Gaussian noise to many copies of the image, and simply averages the resulting gradients.</p>
+      <p>Pixel-based saliency methods provide fine-grained attributions for image models. By attributing individual pixels, these techniques provide fine-grained attributions.</p>
+      <p>However, pixel-based attributions can sometimes be challenging to read and interpret. Salient pixels may be scattered across the image, with positive and negative attributions intermixed. 
+        XRAI identifies salient regions as opposed to pixels. The algorithm uses a pixel-level attribution method such as Integrated Gradients or Guided IG as well as segmentation maps, and then identifies important regions by summing attributions as segments.
+      </p>
       <p style="margin-top: 2em">
         <div class="imgs-container">
           <div class="img-container"></div>
@@ -45,15 +48,17 @@
           </div>
         </div>
       </p>
+      <p style="margin-top: 2em">
+        <h3>Poster (CVPR 2021)</h3>
+        <div class="poster-container">
+          poster goes here
+        </div>
+      </p>
     </div>
     <div class="description" style="margin-top: 3em">
-      <h3>Augmenting other methods</h3>
-      <p>The SmoothGrad technique augments other sensitivity techniques. With this release, we have provided implementations of several sensitivity techniques and their SmoothGrad counterparts. This is not comprehensive, and we are accepting pull requests to add new methods!</p>
-      <p>
-        Below, we show vanilla gradients, <a href="https://arxiv.org/abs/1703.01365">Integrated gradients</a>, and <a href="https://arxiv.org/abs/1412.6806">Guided Backpropagation</a> as they apply to 200 randomly chosen images from the <a href="http://www.image-net.org/">ImageNet dataset</a> using the <a href="https://arxiv.org/abs/1512.00567">Inception V3 model</a>.
-      </p>
-      <p style="margin-bottom: 2em">
-        When the model makes a mistake, we show the row with a light red background and give the option to choose which mask to visualize - label or the prediction. Often times you can see why the model made a mistake!
+      <h3>Applying XRAI on Images</h3>
+      <p>Below, we compare XRAI using Integrated Gradients and Guided IG as they apply to 200 randomly chosen images from the <a href="http://www.image-net.org/">ImageNet dataset</a> using the <a href="https://arxiv.org/abs/1512.00567">Inception V3 model</a>.
+        Because XRAI uses a pixel-based attribution as input, we show how XRAI attribution differs between the two methods.
       </p>
     </div>
   </div>
