Update GIG/XRAI pages (bigger/updated images)

--- a/templates/xrai.html
+++ b/templates/xrai.html
@@ -50,10 +50,9 @@
   <div class="attribution-container">
     <div id="headers">
       <span style="width: 4%"></span><!--
-      --><span style="width: 32%">Image</span><!--
-      --><span style="width: 16%">IntegGrad</span><!--
-      --><span style="width: 16%">Guided IG</span><!--
-      --><span style="width: 16%"></span>
+      --><span style="width: 39%">Image</span><!--
+      --><span style="width: 19%">IntegGrad</span><!--
+      --><span style="width: 19%">Guided IG</span>
     </div>
     <div id="table-container">
       <div class="grad-wrt-container">
@@ -64,7 +63,7 @@
         <img src="images/pointer.png" width="30px"/>
         Mouse over images
       </div>
-      <table id="table">
+      <table id="table" class="fewer-columns">
         <tbody>
         </tbody>
       </table>
