--- a/templates/guided-ig.html
+++ b/templates/guided-ig.html
@@ -3,7 +3,7 @@
     <div class="cover-container">
       <div class="icons">
         <div class="paper-icon">
-          <a href="https://arxiv.org/abs/1706.03825">
+          <a href="https://openaccess.thecvf.com/content/CVPR2021/html/Kapishnikov_Guided_Integrated_Gradients_An_Adaptive_Path_Method_for_Removing_Noise_CVPR_2021_paper.html">
             <img src="images/guided_ig_paper_icon.png" style="width: 100px"/><br>Paper
           </a>
         </div>
