update poster CSS

--- a/templates/guided-ig.html
+++ b/templates/guided-ig.html
@@ -39,7 +39,7 @@
       <p style="margin-top: 2em">
         <h3>Poster (CVPR 2021)</h3>
         <a href="docs/CVPR_Guided_IG_Poster.pdf" target="_blank">
-          <img src="images/gig_poster.png" style="width: 100%"/>
+          <img class="poster" src="images/gig_poster.png" />
         </a>
       </p>
     </div>
