--- a/templates/xrai.html
+++ b/templates/xrai.html
@@ -36,7 +36,7 @@
       <p style="margin-top: 2em">
         <h3>Poster (CVPR 2021)</h3>
         <a href="docs/ICCV_XRAI_Poster.pdf" target="_blank">
-          <img src="images/xrai_poster.png" style="width: 90%"/>
+          <img class="poster" src="images/xrai_poster.png"/>
         </a>
       </p>
     </div>
