Small wording tweaks

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
           <img src="images/preview_xrai.png">
         </div>
         <div class="method" onclick="changeHash('smoothgrad')">
-          <p><u>SmoothGrad</u> creates a set of noisy images then averages gradients (or another saliency method) with respect to these images.
+          <p><u>SmoothGrad</u> creates noisy copies of an input image then averages gradients (or another saliency method) with respect to these copies.
             This often sharpens the resulting saliency map, and removes irrelevant noisy regions.</p>
           <img src="images/preview_smoothgrad.png">
         </div>
